--- a/eos_excercise/create_flexdashboard.Rmd
+++ b/eos_excercise/create_flexdashboard.Rmd
@@ -18,6 +18,7 @@ runtime: shiny
   library(ggplot2)
   library(plotly)
   library(shiny)
+  library(knitr)
   library(flexdashboard)
 
 #====================#
@@ -40,18 +41,20 @@ runtime: shiny
   
   # load data
   load("eos_data_long.rdata")
+  load("eos_data.rdata")
   
 #===================================================#
 # ==== create additional data sets for plotting ====
 #===================================================#
 
   # copy loaded data
-  eos_data <- copy(out_data_long)
-  
+  eos_data      <- copy(out_data)
+  eos_data_long <- copy(out_data_long)
+
   # calculate total number of schs that closed gaps, by year
-  a_cl_gaps_start_yr <- eos_data[variable == "closed_gaps", list(total_schs  = .N,
-                                                                 closed_gaps = sum(value)),
-                                 by = c("start_year_with_eos", "data_yr")]
+  a_cl_gaps_start_yr <- eos_data_long[variable == "closed_gaps", list(total_schs  = .N,
+                                                                      closed_gaps = sum(value)),
+                                      by = c("start_year_with_eos", "data_yr")]
   
   # create variable for schools that didn't close gaps
   a_cl_gaps_start_yr[, not_closed_gaps := closed_gaps - total_schs]
@@ -65,21 +68,58 @@ runtime: shiny
                                       by = c("data_yr", "variable")]
   
   # create percentage of schools var
-  cl_gaps_start_yr[, percent := value / total_schs]
-  cl_gaps_overall[,  percent := value / total_schs]
+  cl_gaps_start_yr[,   percent := value / total_schs]
+  cl_gaps_overall[,    percent := value / total_schs]
   
+#===========================================#
+# ==== create summary tables to display ====
+#===========================================#
+
   # cast students added variables wide, by year
-  studs_added_wide <- dcast(subset(eos_data, variable != "closed_gaps"), district_id + school_id + num_of_years_of_data + start_year_with_eos + 
+  studs_added_wide <- dcast(subset(eos_data_long, variable != "closed_gaps"), district_id + school_id + num_of_years_of_data + start_year_with_eos + 
                               num_of_years_gaps_closed + num_of_ur_added_in_3_years + num_of_ur_added_across_district + data_yr ~ variable, 
                               value.var = c("value"))
 
   # set data year to character
   studs_added_wide[, data_yr := as.character(data_yr)]
   
+  # add percentage closed gaps variable to closed gaps table
+  a_cl_gaps_start_yr[, perc_cl_gaps := round(closed_gaps / total_schs, 2)]
+  
+  # calc overall avgs
+  a_cohort_avgs <- eos_data[is.na(start_year_with_eos) == FALSE, list(total_schs         = .N,
+                                                                      avg_yrs_data       = round(mean(num_of_years_of_data), 2),
+                                                                      avg_yrs_gp_cl      = round(mean(num_of_years_gaps_closed), 2),
+                                                                      avg_num_ur_add_3yr = round(mean(num_of_ur_added_in_3_years), 2)),
+                            by = c("start_year_with_eos")]
+  
+  # take mean of select vars
+  a_studs_added_avg <- studs_added_wide[, list(total_schs      = .N,
+                                               avg_num_add     = round(mean(num_ap_students_added, na.rm = TRUE), 2),
+                                               avg_num_ur_add  = round(mean(num_ap_ur_students_added, na.rm = TRUE), 2),
+                                               avg_num_bm_add  = round(mean(num_ap_bm_students_added, na.rm = TRUE), 2),
+                                               avg_perc_ur_add = round(mean(perc_ap_ur_students_added, na.rm = TRUE), 2),
+                                               avg_perc_bm_add = round(mean(perc_ap_bm_students_added, na.rm = TRUE), 2)),
+                                      by = c("start_year_with_eos", "data_yr")]
+  
+#===================================#
+# ==== format tables to display ====
+#===================================#
+  
+  # sort data by EOS start year
+  setkey(a_cl_gaps_start_yr, start_year_with_eos)
+  setkey(a_studs_added_avg, start_year_with_eos)
+
+  # take absolute value of did not close variable to remove negative values
+  a_cl_gaps_start_yr[, not_closed_gaps := abs(not_closed_gaps)]
+  
+  # rename vars for display
+  setnames(a_cl_gaps_start_yr, c("EOS Start Year", "Data Year", "Total Schools", "Closed Gaps - Number of Schools", 
+                                 "Did Not Close Gaps - Number of Schools", "Closed Gaps - Percentage of Schools"))
 
 ```
 
-Closing Gaps (Page 1) {data-orientation=columns}
+Closing Gaps {data-orientation=columns}
 =====================================  
 
 Column
@@ -132,6 +172,18 @@ Column
 Column {.tabset .tabset-fade}
 -----------------------------------------------------------------------
 
+### Table 1A - Summary of Gaps Closed
+
+```{r}
+
+  # display table
+  output$table_summary_gaps <- renderDataTable(a_cl_gaps_start_yr)
+
+  # display table
+  dataTableOutput('table_summary_gaps')
+
+```
+
 ### Chart 1C - Number of Schools by EOS Start Year
 
 ```{r, fig.width = 15, fig.height = 11}
@@ -178,7 +230,7 @@ Column {.tabset .tabset-fade}
 
 ```
 
-Underrepresented Students Added (Page 2)
+Underrepresented Students Added
 =====================================
 
 Inputs {.sidebar}
@@ -266,7 +318,7 @@ Over Baseline") +
 
 ```
 
-Percentage of Underrepresented Students Added by School (Page 3)
+Percentage of Underrepresented Students Added by School
 =====================================
 
 Inputs {.sidebar}
@@ -307,8 +359,7 @@ Outputs
     # add plotly attributes
     ggplotly(p3a) %>%
       layout(xaxis = list(titlefont = list(size = 18)), 
-             yaxis = list(titlefont = list(size = 15)),
-             annotations = list(list(x = selected_data_p3()$school_id)))
+             yaxis = list(titlefont = list(size = 15)))
         
   })
 
